basing integration test enforcer rules on skipITs property value (#2918)
* basing integration test enforcer rules on skipITs property value

* adding debug output

* debugging no tests issue

* declaring the compiler plugin testCompile goal to run

* reverting to jar packaging type

* removing argLine configuration from maven-failsafe-plugin

* forcing empty argLine configuration from maven-failsafe-plugin

* removing debug flag from integration-tests